--- a/pw-labs-rodrigosantos-a21904445/index.html
+++ b/pw-labs-rodrigosantos-a21904445/index.html
@@ -8,5 +8,6 @@
     <h1>Laboratórios Programação Web</h1>
     <li><a href="lab1/index.html">Laboratório 1: Conhecer a Internet com a minha primeira página Web</a></li>
     <li><a href="lab2/index.html">Laboratório 2: Explorando HTML com o meu primeiro website</a></li>
+    <li><a href="lab3/index.html">Laboratório 3: inclusão de formulários e imagens SVG no meu website</a></li>
 </body>
 </html>
