--- a/pw-labs-rodrigosantos-a21904445/lab4/local.html
+++ b/pw-labs-rodrigosantos-a21904445/lab4/local.html
@@ -8,6 +8,7 @@
         <title>Sydney</title>
         <link rel="shortcut icon" type="images/icon" href="images/icon.ico"/>
         <link rel="stylesheet" href="estilos.css">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
     <body>
         <header>
@@ -22,14 +23,14 @@
         </header>
         
         <nav>
-            <a href="index.html" id="indexLink">Introdução</a>
-            <b><a href="local.html" id="localLink">Localização</a></b>
-            <a href="multimedia.html" id="multimediaLink">Multimédia</a>
-            <a href="info.html" id="infoLink">Informação</a>
-            <a href="quizz.html" id="quizzLink">Quizz</a>
-            <a href="comentarios.html" id="comentariosLink">Comentários</a>
-            <a href="html5-css.html" id="html5EcssLink">HTML5 e CSS</a>
-            <a href="../index.html"id="homeLink">Home</a>
+            <a href="index.html" id="indexLink"><span class="material-icons">&#xe22b;</span>Introdução</a>
+            <b><a href="local.html" id="localLink"><span class="material-icons">&#xe8b4;</span>Localização</a></b>
+            <a href="multimedia.html" id="multimediaLink"><span class="material-icons">&#xe04a;</span>Multimédia</a>
+            <a href="info.html" id="infoLink"><span class="material-icons md-24">info</span>Informação</a>
+            <a href="quizz.html" id="quizzLink"><span class="material-icons">&#xe8af;</span>Quizz</a>
+            <a href="comentarios.html" id="comentariosLink"><span class="material-icons md-24">feedback</span>Comentários</a>
+            <a href="html5-css.html" id="html5EcssLink"><span class="material-icons md-24">settings</span>HTML5 e CSS</a>
+            <a href="../index.html"id="homeLink"><span class="material-icons">&#xe88a;</span>Home</a>
         </nav>
 
         <main>
