--- a/pw-labs-rodrigosantos-a21904445/index.html
+++ b/pw-labs-rodrigosantos-a21904445/index.html
@@ -10,5 +10,6 @@
     <li><a href="lab2/index.html">Laboratório 2: Explorando HTML com o meu primeiro website</a></li>
     <li><a href="lab3/index.html">Laboratório 3: inclusão de formulários e imagens SVG no meu website</a></li>
     <li><a href="lab4/index.html">Laboratório 4: Integração de elementos semânticos HTML5 no meu website e estilização com seletores e propriedades CSS</a></li>
+    <li><a href="lab5/index.html">Laboratório 5: Website responsivo e dinâmico</a></li>
 </body>
 </html>
